{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 912,
  "lineage": "7ac74279-c593-827f-bb3f-65778dfec76f",
  "resources": [
    {
      "module": "module.Apps-Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "heating_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:032970107781:instance/i-0390b83086e877755",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0390b83086e877755",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07fd14c17ae9a6585",
            "private_dns": "ip-10-0-8-241.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.241",
            "public_dns": "ec2-18-134-143-187.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.143.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc9711b6e928dbe8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b53c9969061aa7b0",
            "tags": {
              "Name": "Heating App Server"
            },
            "tags_all": {
              "Name": "Heating App Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d36a849e1c902a43"
            ]
          },
          "dependencies": [
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Apps-Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lighting_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:032970107781:instance/i-0226a3ecc44c371bf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0226a3ecc44c371bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d991a7e91eb48136",
            "private_dns": "ip-10-0-7-163.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.163",
            "public_dns": "ec2-35-177-39-74.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.39.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad59f8db75449da8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3b35be92f5a9713",
            "tags": {
              "Name": "Lighting App Server"
            },
            "tags_all": {
              "Name": "Lighting App Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d36a849e1c902a43"
            ]
          },
          "dependencies": [
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Apps-Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "status_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:032970107781:instance/i-0ae84ffb07be02126",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae84ffb07be02126",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a694957714ddc1c9",
            "private_dns": "ip-10-0-9-9.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.9",
            "public_dns": "ec2-18-134-128-29.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.128.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b96217e71dfa7ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0601424a7d7846986",
            "tags": {
              "Name": "Status App Server"
            },
            "tags_all": {
              "Name": "Status App Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d36a849e1c902a43"
            ]
          },
          "dependencies": [
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:loadbalancer/app/app-lb/87ab0cf04dd15918",
            "arn_suffix": "app/app-lb/87ab0cf04dd15918",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1718746759.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:loadbalancer/app/app-lb/87ab0cf04dd15918",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d36a849e1c902a43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0601424a7d7846986"
              },
              {
                "subnet_id": "subnet-0b53c9969061aa7b0"
              },
              {
                "subnet_id": "subnet-0d3b35be92f5a9713"
              }
            ],
            "subnets": [
              "subnet-0601424a7d7846986",
              "subnet-0b53c9969061aa7b0",
              "subnet-0d3b35be92f5a9713"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07d4b50aab02859e7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/status-tg/d9c21236c46b8cc6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:loadbalancer/app/app-lb/87ab0cf04dd15918",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load-Balancer.aws_lb.app_lb",
            "module.Load-Balancer.aws_lb_target_group.status_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "heating_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/heating-tg/67a19ef34ff517a8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener-rule/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3/2a8e48739da2d7ce",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener-rule/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3/2a8e48739da2d7ce",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load-Balancer.aws_lb.app_lb",
            "module.Load-Balancer.aws_lb_listener.app_lb_listener",
            "module.Load-Balancer.aws_lb_target_group.heating_lb_tg",
            "module.Load-Balancer.aws_lb_target_group.status_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lights_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/lights-tg/0f04f9b1d37c9242",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener-rule/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3/2fea84f2bd3bd891",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener-rule/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3/2fea84f2bd3bd891",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load-Balancer.aws_lb.app_lb",
            "module.Load-Balancer.aws_lb_listener.app_lb_listener",
            "module.Load-Balancer.aws_lb_target_group.lights_lb_tg",
            "module.Load-Balancer.aws_lb_target_group.status_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "status_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/status-tg/d9c21236c46b8cc6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener-rule/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3/76261fa643d2a522",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "api/status/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener-rule/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3/76261fa643d2a522",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:listener/app/app-lb/87ab0cf04dd15918/aa00c81a94e859b3",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load-Balancer.aws_lb.app_lb",
            "module.Load-Balancer.aws_lb_listener.app_lb_listener",
            "module.Load-Balancer.aws_lb_target_group.status_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "heating_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/heating-tg/67a19ef34ff517a8",
            "arn_suffix": "targetgroup/heating-tg/67a19ef34ff517a8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/heating-tg/67a19ef34ff517a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lights_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/lights-tg/0f04f9b1d37c9242",
            "arn_suffix": "targetgroup/lights-tg/0f04f9b1d37c9242",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/lights-tg/0f04f9b1d37c9242",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lights-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "status_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/status-tg/d9c21236c46b8cc6",
            "arn_suffix": "targetgroup/status-tg/d9c21236c46b8cc6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/status-tg/d9c21236c46b8cc6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "heating_app_lb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/heating-tg/67a19ef34ff517a8-20231208091554912500000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/heating-tg/67a19ef34ff517a8",
            "target_id": "i-0390b83086e877755"
          },
          "dependencies": [
            "module.Apps-Server.aws_instance.heating_app_server",
            "module.Apps-Server.aws_instance.lighting_app_server",
            "module.Apps-Server.aws_instance.status_app_server",
            "module.Load-Balancer.aws_lb_target_group.heating_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "light_app_lb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/lights-tg/0f04f9b1d37c9242-20231208091554923100000008",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/lights-tg/0f04f9b1d37c9242",
            "target_id": "i-0226a3ecc44c371bf"
          },
          "dependencies": [
            "module.Apps-Server.aws_instance.heating_app_server",
            "module.Apps-Server.aws_instance.lighting_app_server",
            "module.Apps-Server.aws_instance.status_app_server",
            "module.Load-Balancer.aws_lb_target_group.lights_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Load-Balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "status_app_lb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/status-tg/d9c21236c46b8cc6-20231208091554947600000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:032970107781:targetgroup/status-tg/d9c21236c46b8cc6",
            "target_id": "i-0ae84ffb07be02126"
          },
          "dependencies": [
            "module.Apps-Server.aws_instance.heating_app_server",
            "module.Apps-Server.aws_instance.lighting_app_server",
            "module.Apps-Server.aws_instance.status_app_server",
            "module.Load-Balancer.aws_lb_target_group.status_lb_tg",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:internet-gateway/igw-0dda2b7c2af667b24",
            "id": "igw-0dda2b7c2af667b24",
            "owner_id": "032970107781",
            "tags": {
              "Name": "TF-Project igw"
            },
            "tags_all": {
              "Name": "TF-Project igw"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dda2b7c2af667b24",
            "id": "r-rtb-036a3a6ffe65b15501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036a3a6ffe65b1550",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_internet_gateway.igw",
            "module.Networking.aws_route_table.Public_table",
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:route-table/rtb-036a3a6ffe65b1550",
            "id": "rtb-036a3a6ffe65b1550",
            "owner_id": "032970107781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dda2b7c2af667b24",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF-Project Public table"
            },
            "tags_all": {
              "Name": "TF-Project Public table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032493e10542f5304",
            "route_table_id": "rtb-036a3a6ffe65b1550",
            "subnet_id": "subnet-0d3b35be92f5a9713"
          },
          "dependencies": [
            "module.Networking.aws_route_table.Public_table",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f02412e60a0daf",
            "route_table_id": "rtb-036a3a6ffe65b1550",
            "subnet_id": "subnet-0b53c9969061aa7b0"
          },
          "dependencies": [
            "module.Networking.aws_route_table.Public_table",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e5ac10ed934d1ef",
            "route_table_id": "rtb-036a3a6ffe65b1550",
            "subnet_id": "subnet-0601424a7d7846986"
          },
          "dependencies": [
            "module.Networking.aws_route_table.Public_table",
            "module.Networking.aws_subnet.public_subnets",
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:subnet/subnet-05105a588870da2e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05105a588870da2e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032970107781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project private-eu-west-2a"
            },
            "tags_all": {
              "Name": "TF-Project private-eu-west-2a"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:subnet/subnet-091e3ef20cd2d9a27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091e3ef20cd2d9a27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032970107781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project private-eu-west-2b"
            },
            "tags_all": {
              "Name": "TF-Project private-eu-west-2b"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:subnet/subnet-0b4f4d5e86cb5ea95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f4d5e86cb5ea95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032970107781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project private-eu-west-2c"
            },
            "tags_all": {
              "Name": "TF-Project private-eu-west-2c"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:subnet/subnet-0d3b35be92f5a9713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3b35be92f5a9713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032970107781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project public-eu-west-2a"
            },
            "tags_all": {
              "Name": "TF-Project public-eu-west-2a"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:subnet/subnet-0b53c9969061aa7b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53c9969061aa7b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032970107781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project public-eu-west-2b"
            },
            "tags_all": {
              "Name": "TF-Project public-eu-west-2b"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:subnet/subnet-0601424a7d7846986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0601424a7d7846986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032970107781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project public-eu-west-2c"
            },
            "tags_all": {
              "Name": "TF-Project public-eu-west-2c"
            },
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:vpc/vpc-07d4b50aab02859e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5c125f12f79234c",
            "default_route_table_id": "rtb-0fc1cac85108a4572",
            "default_security_group_id": "sg-0b5243c6886819666",
            "dhcp_options_id": "dopt-0b6a4ac02972326f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d4b50aab02859e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc1cac85108a4572",
            "owner_id": "032970107781",
            "tags": {
              "Name": "Terraform Project"
            },
            "tags_all": {
              "Name": "Terraform Project"
            }
          }
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group/sg-0d36a849e1c902a43",
            "description": "Project securt group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d36a849e1c902a43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "2.25.44.52/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TF-Project app_server SG",
            "name_prefix": "",
            "owner_id": "032970107781",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d4b50aab02859e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-0505b5607c847eb45",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0505b5607c847eb45",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-0505b5607c847eb45",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-00d2490b9c2724a17",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-00d2490b9c2724a17",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-00d2490b9c2724a17",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-054724a0e890acf17",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-054724a0e890acf17",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-054724a0e890acf17",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-0b6d21af90534e57a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b6d21af90534e57a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-0b6d21af90534e57a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-069e87404d3beb20b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-069e87404d3beb20b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-069e87404d3beb20b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-030c453e65e0f2b32",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-030c453e65e0f2b32",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-030c453e65e0f2b32",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ipv4-3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-09e8ea60a05031209",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-09e8ea60a05031209",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-09e8ea60a05031209",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ipv6-3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-09e2969dff656a08f",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-09e2969dff656a08f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-09e2969dff656a08f",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:032970107781:security-group-rule/sgr-050eee86102ce6112",
            "cidr_ipv4": "2.25.44.52/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-050eee86102ce6112",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d36a849e1c902a43",
            "security_group_rule_id": "sgr-050eee86102ce6112",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.tf_project",
            "module.Security.aws_security_group.app_server",
            "module.Security.data.http.myipaddr"
          ]
        }
      ]
    }
  ]
}